WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141503
[iOS] Unable to play .mp4 file over http with basic http authentication
https://bugs.webkit.org/show_bug.cgi?id=141503
Summary
[iOS] Unable to play .mp4 file over http with basic http authentication
Jer Noble
Reported
2015-02-11 23:12:15 PST
[iOS] Unable to play .mp4 file over http with basic http authentication
Attachments
Patch
(11.90 KB, patch)
2015-02-11 23:33 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2015-02-11 23:12:57 PST
<
rdar://problem/15799844
>
Jer Noble
Comment 2
2015-02-11 23:33:57 PST
Created
attachment 246432
[details]
Patch
WebKit Commit Bot
Comment 3
2015-02-16 16:02:55 PST
Comment on
attachment 246432
[details]
Patch Clearing flags on attachment: 246432 Committed
r180183
: <
http://trac.webkit.org/changeset/180183
>
WebKit Commit Bot
Comment 4
2015-02-16 16:02:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug